--- a/lib/txtshr_web/live/page_live.html.leex
+++ b/lib/txtshr_web/live/page_live.html.leex
@@ -1,7 +1,7 @@
 <h1>ur epic code is <%= @code %></h1>
 <form phx-submit="submit">
-  <input type="text" name="code" placeholder="Code">
-  <input type="text" name="txt" placeholder="Text">
+  <input type="text" name="code" placeholder="Code" autocomplete="off">
+  <input type="text" name="txt" placeholder="Text" autocomplete="off">
   <button type="submit">Submit</button>
 </form>
 
