--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -89,3 +89,47 @@
 .alert:empty {
   display: none;
 }
+
+body {
+  background-color: #212121;
+  color: #F5F5F5;
+}
+
+.cntr {
+  margin-top: 15em;
+  align-content: center;
+}
+
+.code {
+  text-align: center;
+  font-size: 6rem;
+  font-family: 'Roboto Mono', monospace;
+}
+
+h3 {
+  margin-bottom: 0;
+  text-align: center;
+  font-family: 'Roboto Mono', monospace;
+}
+
+::placeholder {
+  color: #F5F5F5;
+  opacity: 0.5;
+}
+
+#code::placeholder {
+  text-align: center;
+}
+
+input {
+  color: #f5f5f5;
+}
+
+form {
+  flex-direction: column;
+}
+
+.wrapper {
+  text-align: center;
+  width: 100%;
+}
