--- a/lib/txtshr_web/live/page_live.html.leex
+++ b/lib/txtshr_web/live/page_live.html.leex
@@ -1,3 +1,4 @@
+<div id="toastHookHandler" phx-hook="Toast"></div>
 <h3>Your code is</h3>
 <div class="code"><%= if @loaded do %><%= @code %><% else %>Loading<% end %></div>
 <form phx-submit="submit">
