add github link

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -95,8 +95,13 @@ body {
   color: #F5F5F5;
 }
 
+img {
+  width: 3em;
+  height: 3em;
+}
+
 .cntr {
-  margin-top: 15em;
+  margin-top: 12em;
   align-content: center;
 }
 
