--- a/lib/txtshr_web/templates/layout/root.html.leex
+++ b/lib/txtshr_web/templates/layout/root.html.leex
@@ -31,6 +31,7 @@
         }
       }
     </script>
+    <a href="https://github.com/cyber28/txtshr" target="_blank"><img src="<%= Routes.static_path(@conn, "/images/github.png") %>" /></a>
     <div class="cntr">
       <%= @inner_content %>
     </div>
